# arraybackend

./: README.md  pyproject.toml
src/arraybackend/: __init__.py  arraybackendcpu.py  arraybackendgpu.py  interface.py
