[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "arraybackend"
version = "0.0.0"
dependencies = [
  "numpy>=2.4.1",
]
requires-python = ">=3.13"
authors = [
  { name = "Oscar Tovey Garcia", email = "otoveyg@gmail.com" }
]
description = "Wrapper for different array backends (numpy, cupy)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
cuda12 = ["cupy-cuda12x>=13.6.0"]
cuda13 = ["cupy-cuda13x>=13.6.0"]
dev = [
  "pytest>=7.4",
  "pytest-cov",
  "black",
  "isort",
  "flake8",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/oscarjtg/arraybackend"
Issues = "https://github.com/oscarjtg/arraybackend/issues"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
